--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "^2.9.1"
   }
 }
